--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
     "@popperjs/core": "2.10.2",
     "axios": "^1.1.3",
     "bootstrap": "5.1.3",
