--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@vue/test-utils": "^2.2.7",
     "@vue/vue3-jest": "^27.0.0",
     "babel-eslint": "10.1.0",
+    "babel-jest": "^27.5.1",
     "eslint": "6.7.2",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "7.0.0",
