--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "axios": "^1.1.3",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
-    "core-js": "3.6.5",
+    "core-js": "^3.6.5",
     "dropzone": "6.0.0-beta.1",
     "quill": "1.3.6",
     "vue": "3.2.0",
